# safesync

./: .gitignore  CNAME  README.md  SafeSync.hs  _config.yml  safesync.cabal
SafeSync/: ClientFileJournal.hs  Files.hs  KDF.hs  Partition.hs  client_file_journal.sql
backend/: README.md  safesync.cabal
backend/app/: Config.hs  Main.hs
backend/object_store/: init.sh
backend/postgresql/: safesync.sql
backend/src/: ObjectStore.hs  Server.hs
backend/src/SafeSync/: Auth.hs  Config.hs  ObjectStore.hs  Routes.hs  Utils.hs
backend/src/SafeSync/Database/: Connection.hs  Models.hs  Queries.hs  Types.hs
backend/src/SafeSync/ObjectStore/: Events.hs  Object.hs  S3.hs  Webhooks.hs
backend/src/SafeSync/Web/: Routes.hs  Server.hs
backend/src/Server/: Api.hs  Models.hs
backend/test/: Main.hs  Tests.hs
backend/test/SafeSync/Database/Types/Test/: Test.hs
backend/test/database/: Database.hs  random_database.py
backend/test/db-test/: Config.hs  Connection.hs  Main.hs  Models.hs  Queries.hs
client/: README.md  client_file_journal.py  files.py
client/safesync/: client_file_journal.py  crypto.py  daemon.py  files.py  utils.py
client/src/: crypto.py  daemon.py  files.py
client/tests/: conftest.py  test_files.py
docs/: CNAME  Gemfile  _config.yml  backend.markdown  client.markdown  index.markdown
docs/_site/: 404.html  backend.html  client.html  feed.xml  index.html
server/: Api.hs  Models.hs  Server.hs
src/SafeSync/: Client.hs  Server.hs
src/SafeSync/Client/: Api.hs  App.hs  ClientFileJournal.hs  Files.hs  KDF.hs  Partition.hs  client_file_journal.sql
src/SafeSync/Server/: Api.hs  App.hs  Backend.hs  MetadataDatabase.hs  ORM.hs  ObjectStore.hs  Partitions.hs  README.md  metadata_database.sql
