cabal-version: 1.12

name:           safesync
version:        0.1.0.0
homepage:       https://github.com/rure6748/safesync.io
author:         Rudy Reynolds
maintainer:     rudy.reyn@gmail.com
build-type:     Simple
extra-source-files:
    README.md

source-repository head
  type: git
  location: https://github.com/rure6748/safesync.io

library
  hs-source-dirs:
      src
  build-depends:
    , base >=4.7 && <5
    , aeson
    , wreq
    , minio-hs
    , scotty
    , cryptonite
    , esqueleto
  default-language: Haskell2010
