cabal-version: 3.0
name:           safesync
version:        0.1.0.0
author:         Rudy Reynolds
maintainer:     rudy.reyn@gmail.com
build-type:     Simple

source-repository head
    type: git
    location: https://github.com/rudy-reyn/safesync.io

executable project
    main-is:          Main.hs
    build-depends:
        base >= 4.14.3.0,
        safesync
    hs-source-dirs:   app
    default-language: Haskell2010

library
    hs-source-dirs: src
    build-depends:
        base       >= 4.14.3.0,
        bytestring >= 0.10.0.2 && < 0.12,
        aeson      >= 2.1.1.0,
        minio-hs   >= 1.6.0,
        scotty     >= 0.12.1,
        cryptonite >= 0.30,
        persistent >= 2.14.4.4,
        persistent-postgresql == 2.13.5.1
        wai-extra
        http-types
    default-language: Haskell2010
  
test-suite safesync-test
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Tests.hs
    build-depends:
        base >= 4.14.3.0,
        safesync,
        HUnit
    default-language: Haskell2010
